--- a/grid.css
+++ b/grid.css
@@ -6,43 +6,22 @@ body {
     display: grid;
 }
 
-body > * {
-    margin: 0px;
-}
+body > * { margin: 0px; }
+
+body > header { grid-area: header; }
+body > nav    { grid-area: nav; }
+body > main   { grid-area: main; }
+body > footer { grid-area: footer; }
 
 /* Desktop Grid Layout */
 body {
-    grid-template-columns: 100px 5% auto 5%;
+    grid-template-columns: 100px 2.5% auto 2.5%;
     grid-template-rows: 75px auto auto 30px;
+    grid-template-areas:
+        "header header header header"
+        "nav    .      main   .     "
+        "nav    .      main   .     "
+        "footer footer footer footer";
 }
-
-body > header {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 5;
-}
-
-body > nav {
-    grid-row-start: 2;
-    grid-row-end: 4;
-    grid-column-start: 1;
-    grid-column-end: 2;
-}
-
-body > main {
-    grid-row-start: 2;
-    grid-row-end: 4;
-    grid-column-start: 3;
-    grid-column-end: 4;
-}
-
-body > footer {
-    grid-row-start: 4;
-    grid-row-end: 5;
-    grid-column-start: 1;
-    grid-column-end: 5;
-}
-/* End of Desktop Grid Layout */
 
 /* TODO: Mobile Grid Layout */
