Add padding around main body text

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -13,7 +13,10 @@ body > nav    {
     grid-area: nav;
     display: flex;
 }
-body > main   { grid-area: main; }
+body > main   {
+    grid-area: main;
+    padding: 10px 30px 10px 30px;
+}
 body > footer { grid-area: footer; }
 
 /* Desktop Grid Layout */
