--- a/styles/grid.css
+++ b/styles/grid.css
@@ -35,3 +35,33 @@ body > nav {
 }
 
 /* TODO: Mobile Grid Layout */
+@media screen and (orientation: portrait) {
+    body {
+        grid-template-columns: 2.5% auto 2.5%;
+        grid-template-rows: 75px fit-content(0px) auto auto fit-content(0px);
+        grid-template-areas:
+            "header header header"
+            "nav    nav    nav   "
+            ".      main   .     "
+            ".      main   .     "
+            "footer footer footer";
+    }
+    
+    body > nav {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    body > nav > a {
+        flex-grow: 1;
+    }
+
+    #SmolYuriLabel {
+        visibility: hidden;
+    }
+
+    #SmolYuriImg {
+        height: 32px;
+    }
+}
+
