--- a/styles/grid.css
+++ b/styles/grid.css
@@ -22,7 +22,7 @@ body > footer { grid-area: footer; }
 /* Desktop Grid Layout */
 body {
     grid-template-columns: 100px 2.5% auto 2.5%;
-    grid-template-rows: 75px auto auto 1.5rem;
+    grid-template-rows: fit-content(0px) auto auto fit-content(0px);
     grid-template-areas:
         "header header header header"
         "nav    .      main   .     "
