--- a/styles/grid.css
+++ b/styles/grid.css
@@ -19,9 +19,15 @@ body > main   {
 }
 body > footer { grid-area: footer; }
 
+body > nav > a {
+    display: inline-block;
+    vertical-align: middle;
+    flex-basis: 0px;
+}
+
 /* Desktop Grid Layout */
 body {
-    grid-template-columns: 100px 2.5% auto 2.5%;
+    grid-template-columns: 112px 2.5% auto 2.5%;
     grid-template-rows: fit-content(0px) auto auto fit-content(0px);
     grid-template-areas:
         "header header header header"
@@ -38,7 +44,7 @@ body > nav {
 @media screen and (orientation: portrait) {
     body {
         grid-template-columns: 2.5% auto 2.5%;
-        grid-template-rows: 75px fit-content(0px) auto auto fit-content(0px);
+        grid-template-rows: fit-content(0px) fit-content(0px) auto auto fit-content(0px);
         grid-template-areas:
             "header header header"
             "nav    nav    nav   "
